Changes

Assignment 2:

Added vertex class: type i-vi test; convex test
