@@ -30,6 +30,9 @@ free_workspace_vertices = [
 polygon = MME565.Polygon(polygon_vertices)
 free_workspace = MME565.Polygon(free_workspace_vertices)
 
+trapezoids = MME565.trapezoidation(free_workspace, [polygon])
+print(trapezoids[0].vertex_array)
+
 # plot convex / non-convex vertices
 fig, ax = plt.subplots()
 patches = [mpatches.Polygon(polygon.vertex_array), mpatches.Polygon(free_workspace.vertex_array)]
@@ -44,7 +47,20 @@ for vertex in polygon.vertices:
         ax.annotate("non-convex", (vertex.x, vertex.y))
 plt.axis('equal')
 plt.tight_layout()
-plt.show()
+
+# plot vertex coordinates
+fig, ax = plt.subplots()
+patches = [mpatches.Polygon(polygon.vertex_array), mpatches.Polygon(free_workspace.vertex_array)]
+colors = np.linspace(0, 1, 9)
+collection = PatchCollection(patches, cmap=plt.cm.hsv, alpha=0.3)
+collection.set_array(colors)
+ax.add_collection(collection)
+for vertex in polygon.vertices:
+    ax.annotate(vertex.cartesian, (vertex.x, vertex.y))
+for vertex in free_workspace.vertices:
+    ax.annotate(vertex.cartesian, (vertex.x, vertex.y))
+plt.axis('equal')
+plt.tight_layout()
 
 # plot vertex type
 fig, ax = plt.subplots()
@@ -55,6 +71,23 @@ collection.set_array(colors)
 ax.add_collection(collection)
 for vertex in polygon.vertices:
     ax.annotate(vertex.type, (vertex.x, vertex.y))
+plt.axis('equal')
+plt.tight_layout()
+
+# plot trapezoidation
+fig, ax = plt.subplots()
+patches = [
+    mpatches.Polygon(polygon.vertex_array),
+    mpatches.Polygon(free_workspace.vertex_array),
+    ]
+for trapezoid in trapezoids:
+    patches.append(mpatches.Polygon(trapezoid.vertex_array))
+colors = np.linspace(0, 1, 9)
+collection = PatchCollection(patches, cmap=plt.cm.hsv, alpha=0.3)
+collection.set_array(colors)
+ax.add_collection(collection)
+for trapezoid in trapezoids:
+    ax.annotate(trapezoid.center_cartesian, (trapezoid.center.x, trapezoid.center.y))
 plt.axis('equal')
 plt.tight_layout()
 plt.show()
